--- a/articles.html
+++ b/articles.html
@@ -56,42 +56,42 @@
         <div class="row justify-content-center mx-auto h-50 mt-md-5">
             <div class="col-md-4 mx-auto no-gutters">
                 <div class="col-md-12 mx-auto">
-
-                    <div class="card articulo border-0 mb-5 mt-5 mb-md-0 mt-md-0">
-                        <img class="card-img-top imagen-articulo rounded-0" src="img/zoom-lens.jpg" alt="Card image cap">
-                        <h2 class="card-title titulo-articulo ml-3 mt-3 mb-n2">Google Lens</h2>
-                        <div class="card-body">
-                            <p class="card-text cuerpo-articulo">Google Lens: Search The Web With Your Smarthphone's <br> Camera
-                            </p>
+                    <a class="empty" href="">
+                        <div class="card articulo border-0 mb-5 mt-5 mb-md-0 mt-md-0">
+                            <img class="card-img-top imagen-articulo rounded-0" src="img/zoom-lens.jpg" alt="Card image cap">
+                            <h2 class="card-title titulo-articulo ml-3 mt-3 mb-n2">Google Lens</h2>
+                            <div class="card-body">
+                                <p class="card-text cuerpo-articulo">Google Lens: Search The Web With Your Smarthphone's <br> Camera
+                                </p>
+                            </div>
                         </div>
-                    </div>
-
+                    </a>
                 </div>
             </div>
             <div class="col-md-4 mx-auto no-gutters">
                 <div class="col-md-12 mx-auto">
-
-                    <div class="card articulo border-0 mb-5 mt-5 mb-md-0 mt-md-0">
-                        <img class="card-img-top imagen-articulo rounded-0" src="img/camera-lens.jpg" alt="Card image cap">
-                        <h3 class="card-title titulo-articulo ml-3 mt-3 mb-n2">Improve Your Local SEO <br> with SEMrush</h3>
-                        <div class="card-body">
-                            <p class="card-text cuerpo-articulo">Want to grow your local business? Start with online visibility! Strengthen your local SEO <br> with 5 simple and effective.</p>
+                    <a class="empty" href="">
+                        <div class="card articulo border-0 mb-5 mt-5 mb-md-0 mt-md-0">
+                            <img class="card-img-top imagen-articulo rounded-0" src="img/camera-lens.jpg" alt="Card image cap">
+                            <h3 class="card-title titulo-articulo ml-3 mt-3 mb-n2">Improve Your Local SEO <br> with SEMrush</h3>
+                            <div class="card-body">
+                                <p class="card-text cuerpo-articulo">Want to grow your local business? Start with online visibility! Strengthen your local SEO <br> with 5 simple and effective.</p>
+                            </div>
                         </div>
-                    </div>
-
+                    </a>
                 </div>
             </div>
             <div class="col-md-4 mx-auto no-gutters">
                 <div class="col-md-12 mx-auto">
-
-                    <div class="card articulo border-0 mb-5 mt-5 mb-md-0 mt-md-0">
-                        <img class="card-img-top imagen-articulo rounded-0" src="img/documentary-lens.jpg" alt="Card image cap">
-                        <h4 class="card-title titulo-articulo ml-3 mt-3 mb-n2">5 Documentary-Style Lenses <br> for 5 Different Budgets</h4>
-                        <div class="card-body">
-                            <p class="card-text cuerpo-articulo">To find the perfect <br> documentary-style lenses for your next project, we're going to look at five of the top lenses across multiple budget ranges.</p>
+                    <a class="empty" href="">
+                        <div class="card articulo border-0 mb-5 mt-5 mb-md-0 mt-md-0">
+                            <img class="card-img-top imagen-articulo rounded-0" src="img/documentary-lens.jpg" alt="Card image cap">
+                            <h4 class="card-title titulo-articulo ml-3 mt-3 mb-n2">5 Documentary-Style Lenses <br> for 5 Different Budgets</h4>
+                            <div class="card-body">
+                                <p class="card-text cuerpo-articulo">To find the perfect <br> documentary-style lenses for your next project, we're going to look at five of the top lenses across multiple budget ranges.</p>
+                            </div>
                         </div>
-                    </div>
-
+                    </a>
                 </div>
             </div>
         </div>
