--- a/home.html
+++ b/home.html
@@ -57,38 +57,44 @@
             
             <div class="col-sm-12 d-flex altura">
                 <div class="col-sm-12 d-flex flex-column justify-content-end align-items-center fondo fondo-1">
-                    <h1 class="text-center mx-auto mb-4 titulo">
-                        SHOOT ZOOM
-                    </h1>
-                    <h2 class="text-center mx-auto mb-5 mt-2 subtitulo">
-                        DXOMARK measures the performance of interchangeable lenses
-                    </h2>
+                    <a class="empty" href="#">
+                        <h1 class="text-center mx-auto mb-4 titulo">
+                            SHOOT ZOOM
+                        </h1>
+                        <h2 class="text-center mx-auto mb-5 mt-2 subtitulo">
+                            DXOMARK measures the performance of interchangeable lenses
+                        </h2>
+                    </a>
                 </div>
             </div>
 
             <div class="col-sm-6 d-flex altura">
-                <div class="col-sm-11h mt-4 d-flex fondo fondo-2">        
-                    <h3 class="titulo imagen-2 my-auto ml-3">
-                        The Most 
-                        <br>
-                        Advanced 
-                        <br>
-                        Photo
-                    </h3>
+                <div class="col-sm-11h mt-4 d-flex fondo fondo-2">      
+                    <a class="empty my-auto" href="#"> 
+                        <h3 class="titulo imagen-2 ml-3">
+                            The Most 
+                            <br>
+                            Advanced 
+                            <br>
+                            Photo
+                        </h3>
+                    </a>
                 </div>
             </div>
             <div class="col-sm-6 d-flex altura">
                 <div class="col-sm-11h mt-4 d-flex ml-auto align-items-center fondo fondo-3">
                     <div class="ml-5 mt-5 mb-n3">
-                        <h3 class="titulo imagen-3">
-                            LEARN ABOUT ALL THE
-                        </h3>
-                        <h4 class="titulo imagen-3 renglon-2">
-                            LATEST FEATURES                        
-                        </h4>
-                        <h5 class="titulo imagen-3 renglon-3 mt-lg-n4 ml-lg-n2 mt-md-n4 ml-md-n5 mt-sm-n2 ml-sm-n5 mt-n1 ml-n5">
-                            <i class='bx bx-right-arrow-alt'></i>
-                        </h5>
+                        <a class="empty" href="#">
+                            <h3 class="titulo imagen-3">
+                                LEARN ABOUT ALL THE
+                            </h3>
+                            <h4 class="titulo imagen-3 renglon-2">
+                                LATEST FEATURES                        
+                            </h4>
+                            <h5 class="titulo imagen-3 renglon-3 mt-lg-n4 ml-lg-n2 mt-md-n4 ml-md-n5 mt-sm-n2 ml-sm-n5 mt-n1 ml-n5">
+                                <i class='bx bx-right-arrow-alt'></i>
+                            </h5>
+                        </a>
                     </div>
                 </div>
             </div>
